--- a/admin/status/index.html
+++ b/admin/status/index.html
@@ -517,6 +517,7 @@ body { background-color: #111; color: #aaa; }
       "image",
       "warning",
       "no-wrapper",
+      "link",
       "h6",
       "blockquote",
       "h1",
