Added copy buttons

--- a/admin/status/index.html
+++ b/admin/status/index.html
@@ -30,12 +30,14 @@ body { background-color: #111; color: #aaa; }
   &lt;div class=&quot;code-wrapper&quot;&gt;
     &lt;div class=&quot;code-title&quot;&gt;no-nums
     &lt;&#x2f;div&gt;
-    &lt;pre class=&quot;code-block-no-nums&quot;&gt;
-      &lt;code&gt;
-        &lt;span class=&quot;text plain&quot;&gt;alfa bravo
-        &lt;&#x2f;span&gt;
-      &lt;&#x2f;code&gt;
-    &lt;&#x2f;pre&gt;
+    &lt;div class=&quot;code-button-wrapper&quot;&gt;
+      &lt;pre class=&quot;code-block-no-nums&quot;&gt;
+        &lt;code&gt;
+          &lt;span class=&quot;text plain&quot;&gt;alfa bravo
+          &lt;&#x2f;span&gt;
+        &lt;&#x2f;code&gt;
+      &lt;&#x2f;pre&gt;
+    &lt;&#x2f;div&gt;
   &lt;&#x2f;div&gt;
 &lt;&#x2f;section&gt;
 
@@ -67,14 +69,16 @@ body { background-color: #111; color: #aaa; }
   &lt;div class=&quot;code-wrapper&quot;&gt;
     &lt;div class=&quot;code-subtitle&quot;&gt;file: some&#x2f;file&#x2f;path.txt
     &lt;&#x2f;div&gt;
-    &lt;pre class=&quot;code-block&quot;&gt;
-      &lt;code&gt;
-        &lt;span class=&quot;line-marker&quot;&gt;
-        &lt;&#x2f;span&gt;
-        &lt;span class=&quot;text plain&quot;&gt;delta whiskey
-        &lt;&#x2f;span&gt;
-      &lt;&#x2f;code&gt;
-    &lt;&#x2f;pre&gt;
+    &lt;div class=&quot;code-button-wrapper&quot;&gt;
+      &lt;pre class=&quot;code-block&quot;&gt;
+        &lt;code&gt;
+          &lt;span class=&quot;line-marker&quot;&gt;
+          &lt;&#x2f;span&gt;
+          &lt;span class=&quot;text plain&quot;&gt;delta whiskey
+          &lt;&#x2f;span&gt;
+        &lt;&#x2f;code&gt;
+      &lt;&#x2f;pre&gt;
+    &lt;&#x2f;div&gt;
   &lt;&#x2f;div&gt;
 &lt;&#x2f;section&gt;
 
@@ -128,38 +132,40 @@ body { background-color: #111; color: #aaa; }
   &lt;div class=&quot;code-wrapper&quot;&gt;
     &lt;div class=&quot;code-title&quot;&gt;python
     &lt;&#x2f;div&gt;
-    &lt;pre class=&quot;code-block&quot;&gt;
-      &lt;code&gt;
-        &lt;span class=&quot;line-marker&quot;&gt;
-        &lt;&#x2f;span&gt;
-        &lt;span class=&quot;source python&quot;&gt;
-          &lt;span class=&quot;meta function-call python&quot;&gt;
-            &lt;span class=&quot;meta qualified-name python&quot;&gt;
-              &lt;span class=&quot;support function builtin python&quot;&gt;print
+    &lt;div class=&quot;code-button-wrapper&quot;&gt;
+      &lt;pre class=&quot;code-block&quot;&gt;
+        &lt;code&gt;
+          &lt;span class=&quot;line-marker&quot;&gt;
+          &lt;&#x2f;span&gt;
+          &lt;span class=&quot;source python&quot;&gt;
+            &lt;span class=&quot;meta function-call python&quot;&gt;
+              &lt;span class=&quot;meta qualified-name python&quot;&gt;
+                &lt;span class=&quot;support function builtin python&quot;&gt;print
+                &lt;&#x2f;span&gt;
               &lt;&#x2f;span&gt;
-            &lt;&#x2f;span&gt;
-            &lt;span class=&quot;punctuation section arguments begin python&quot;&gt;(
-            &lt;&#x2f;span&gt;
-            &lt;span class=&quot;meta function-call arguments python&quot;&gt;
-              &lt;span class=&quot;meta string python&quot;&gt;
-                &lt;span class=&quot;string quoted double python&quot;&gt;
-                  &lt;span class=&quot;punctuation definition string begin python&quot;&gt;&amp;quot;
+              &lt;span class=&quot;punctuation section arguments begin python&quot;&gt;(
+              &lt;&#x2f;span&gt;
+              &lt;span class=&quot;meta function-call arguments python&quot;&gt;
+                &lt;span class=&quot;meta string python&quot;&gt;
+                  &lt;span class=&quot;string quoted double python&quot;&gt;
+                    &lt;span class=&quot;punctuation definition string begin python&quot;&gt;&amp;quot;
+                    &lt;&#x2f;span&gt;
+                  &lt;&#x2f;span&gt;
+                &lt;&#x2f;span&gt;
+                &lt;span class=&quot;meta string python&quot;&gt;
+                  &lt;span class=&quot;string quoted double python&quot;&gt;Hello, World
+                    &lt;span class=&quot;punctuation definition string end python&quot;&gt;&amp;quot;
+                    &lt;&#x2f;span&gt;
                   &lt;&#x2f;span&gt;
                 &lt;&#x2f;span&gt;
               &lt;&#x2f;span&gt;
-              &lt;span class=&quot;meta string python&quot;&gt;
-                &lt;span class=&quot;string quoted double python&quot;&gt;Hello, World
-                  &lt;span class=&quot;punctuation definition string end python&quot;&gt;&amp;quot;
-                  &lt;&#x2f;span&gt;
-                &lt;&#x2f;span&gt;
+              &lt;span class=&quot;punctuation section arguments end python&quot;&gt;)
               &lt;&#x2f;span&gt;
-            &lt;&#x2f;span&gt;
-            &lt;span class=&quot;punctuation section arguments end python&quot;&gt;)
             &lt;&#x2f;span&gt;
           &lt;&#x2f;span&gt;
-        &lt;&#x2f;span&gt;
-      &lt;&#x2f;code&gt;
-    &lt;&#x2f;pre&gt;
+        &lt;&#x2f;code&gt;
+      &lt;&#x2f;pre&gt;
+    &lt;&#x2f;div&gt;
   &lt;&#x2f;div&gt;
 &lt;&#x2f;section&gt;
 
@@ -191,14 +197,16 @@ body { background-color: #111; color: #aaa; }
   &lt;div class=&quot;code-wrapper&quot;&gt;
     &lt;div class=&quot;code-title&quot;&gt;Some Code
     &lt;&#x2f;div&gt;
-    &lt;pre class=&quot;code-block&quot;&gt;
-      &lt;code&gt;
-        &lt;span class=&quot;line-marker&quot;&gt;
-        &lt;&#x2f;span&gt;
-        &lt;span class=&quot;text plain&quot;&gt;Code with a title
-        &lt;&#x2f;span&gt;
-      &lt;&#x2f;code&gt;
-    &lt;&#x2f;pre&gt;
+    &lt;div class=&quot;code-button-wrapper&quot;&gt;
+      &lt;pre class=&quot;code-block&quot;&gt;
+        &lt;code&gt;
+          &lt;span class=&quot;line-marker&quot;&gt;
+          &lt;&#x2f;span&gt;
+          &lt;span class=&quot;text plain&quot;&gt;Code with a title
+          &lt;&#x2f;span&gt;
+        &lt;&#x2f;code&gt;
+      &lt;&#x2f;pre&gt;
+    &lt;&#x2f;div&gt;
   &lt;&#x2f;div&gt;
 &lt;&#x2f;section&gt;
 
@@ -224,20 +232,22 @@ body { background-color: #111; color: #aaa; }
 <pre>
 &lt;section class=&quot;cli-section&quot;&gt;
   &lt;div class=&quot;cli-wrapper&quot;&gt;
-    &lt;div class=&quot;cli-title&quot;&gt;command line:
+    &lt;div class=&quot;cli-title&quot;&gt;terminal commands
     &lt;&#x2f;div&gt;
-    &lt;pre class=&quot;cli-block&quot;&gt;
-      &lt;code&gt;
-        &lt;span class=&quot;source shell bash&quot;&gt;
-          &lt;span class=&quot;meta function-call shell&quot;&gt;
-            &lt;span class=&quot;support function command shell&quot;&gt;command
+    &lt;div class=&quot;code-button-wrapper&quot;&gt;
+      &lt;pre class=&quot;cli-block&quot;&gt;
+        &lt;code&gt;
+          &lt;span class=&quot;source shell bash&quot;&gt;
+            &lt;span class=&quot;meta function-call shell&quot;&gt;
+              &lt;span class=&quot;support function command shell&quot;&gt;command
+              &lt;&#x2f;span&gt;
+            &lt;&#x2f;span&gt;
+            &lt;span class=&quot;meta function-call arguments shell&quot;&gt;line snippet
             &lt;&#x2f;span&gt;
           &lt;&#x2f;span&gt;
-          &lt;span class=&quot;meta function-call arguments shell&quot;&gt;line snippet
-          &lt;&#x2f;span&gt;
-        &lt;&#x2f;span&gt;
-      &lt;&#x2f;code&gt;
-    &lt;&#x2f;pre&gt;
+        &lt;&#x2f;code&gt;
+      &lt;&#x2f;pre&gt;
+    &lt;&#x2f;div&gt;
   &lt;&#x2f;div&gt;
 &lt;&#x2f;section&gt;
 
